Name:           LambdaJS
Version:        1.2
Cabal-Version:	>= 1.2.3
Copyright:      Copyright (c) 2009--2012 Brown University and Claudiu Saftoiu
License:        BSD3
License-file:   ../LICENSE
Author:         Arjun Guha, Claudiu Saftoiu
Maintainer:     Arjun Guha <arjun@cs.brown.edu>
Homepage:       http://www.cs.brown.edu/~arjun/
Stability:      experimental
Category:       Language
Build-Type:     Custom
Synopsis:       Compiler from JavaScript to LambdaJS.
Description:

Library
  Hs-Source-Dirs: src
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 1.1.0.1,
    parsec >= 3.0.0,
    pretty >= 0.1, 
    containers >= 0.1,
    syb >= 0.1,
    language-ecmascript
  ghc-options:
    -fwarn-incomplete-patterns 
  Extensions:     
    DeriveDataTypeable Rank2Types FlexibleInstances
  Exposed-Modules:
    Language.LambdaJS
    Language.LambdaJS.AssignableVars
    Language.LambdaJS.Desugar
    Language.LambdaJS.DesugarWith
    Language.LambdaJS.ECMAEnvironment
    Language.LambdaJS.Lexer
    Language.LambdaJS.LiftFuncStmts
    Language.LambdaJS.LocalVars
    Language.LambdaJS.Parser
    Language.LambdaJS.Prelude
    Language.LambdaJS.PrettyPrint
    Language.LambdaJS.RemoveHOAS
    Language.LambdaJS.Syntax

-- Executable lambdaJS
--   Main-Is: LambdaJS.hs
--   Hs-Source-Dirs: src
--   Build-Depends:
--     base >= 4 && < 5,
--     mtl >= 1.1.0.1,
--     parsec >= 3.0.0,
--     pretty >= 0.1, 
--     containers >= 0.1,
--     syb >= 0.1,
--     language-ecmascript
--   ghc-options:
--     -fwarn-incomplete-patterns -rtsopts
--   Extensions:     
--     DeriveDataTypeable Rank2Types FlexibleInstances
